fix clipping to not use vh, vw

--- a/style.scss
+++ b/style.scss
@@ -129,7 +129,7 @@ body{
 
 
 .load-clip {
-	height: 100vh; width: 100vw; overflow: hidden;
+	height: 100%; width: 100%; overflow: hidden;
 }
 
 .feature-link {
